index.html updated

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="main-nav__main-navigation">
                         <ul class=" main-nav__navigation-box">
                             <li class="dropdown">
-                                <a href="index.html">Home</a>
+                                <a href="https://services.blockchain313.com">Home</a>
                             </li>
                             <li>
                                 <a href="about.html">About</a>
@@ -131,8 +131,7 @@
                     <div class="col-xl-7">
                         <div class="banner-two__content">
                             <h3><span>Discover New </span> <br>Idea To Build <br> Your <em>Business</em></h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor incididunt
-                                ut labore et dolore magna</p>
+                            <p>We are here to help you to make your business available to whole world <br> and correctly optimize for search engine. </p>
                             <a href="#" class="thm-btn banner-two__btn">Discover Now <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn -->
                         </div><!-- /.banner-two__content -->
                     </div><!-- /.col-xl-7 -->
