index.html updation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home 02 || Bizkar || Creative Multi-Purpose HTML Template</title>
+    <title>Services By BlockChain 313 team</title>
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
@@ -55,7 +55,7 @@
             <nav class="main-nav__two stricky">
                 <div class="container">
                     <div class="main-nav__logo-box">
-                        <a href="index.html">
+                        <a href="https://services.blockchain313.com">
                             <img src="assets/images/logo-2-1.png" alt="">
                         </a>
                     </div><!-- /.main-nav__logo-box -->
@@ -379,7 +379,7 @@
                     <div class="col-lg-6">
                         <div class="video-one__box wow fadeInLeft" data-wow-duration="1500ms">
                             <img src="assets/images/resources/video-1-1.jpg" alt="">
-                            <a href="https://www.youtube.com/watch?v=Rw1JBhaoHBs" class="video-popup video-one__btn"><i class="fa fa-play"></i></a><!-- /.video-popup video-one__btn -->
+                            <a href="https://www.youtube.com/c/videofyzone" class="video-popup video-one__btn"><i class="fa fa-play"></i></a><!-- /.video-popup video-one__btn -->
                         </div><!-- /.video-one__box -->
                     </div><!-- /.col-lg-6 -->
                     <div class="col-lg-6 d-flex">
@@ -1105,8 +1105,8 @@
                             <div class="footer-widget footer-widget__links">
                                 <h3 class="footer-widget__title">Quick Links</h3><!-- /.footer-widget__title -->
                                 <ul class="footer-widget__links-list list-unstyled">
-                                    <li><a href="#">About Us</a></li>
-                                    <li><a href="#">Our Services</a></li>
+                                    <li><a href="about.html">About Us</a></li>
+                                    <li><a href="services-details.html">Our Services</a></li>
                                     <li><a href="#">Setting & Privecy</a></li>
                                     <li><a href="#">Need a Job?</a></li>
                                     <li><a href="#">Latest Blog</a></li>
@@ -1126,11 +1126,11 @@
                                 <ul class="footer-widget__contact-list list-unstyled">
                                     <li>
                                         <i class="far fa-envelope"></i>
-                                        <a href="mailto:support@gmail.com">support@gmail.com</a>
+                                        <a href="mailto:qasim@blockchain313.com">qasim@blockchain313.com</a>
                                     </li>
                                     <li>
                                         <i class="far fa-phone"></i>
-                                        <a href="tel:+823-654-445-64">+823 654 445 64</a>
+                                        <a href="tel:+923410592668">+92 341 0592668</a>
                                     </li>
                                 </ul><!-- /.footer-widget__contact-list -->
                             </div><!-- /.footer-widget footer-widget__post -->
@@ -1140,7 +1140,7 @@
             </div><!-- /.site-footer-two__upper -->
             <div class="site-footer-two__bottom">
                 <div class="container">
-                    <p>Copy@2020 <a href="#">Bizkar</a>. All Right Reserved.</p>
+                    <p>Copyright © 2021 <a href="https://www.blockchain313.com">BlockChain Technology</a>, <a href="https://videofy.co.vu">Videofy AutoMobile Zone</a> and <a href="https://www.shaheeninstitute.blogspot.com">Shaheen Institute</a>. All Right Reserved.</p>
                 </div><!-- /.container -->
             </div><!-- /.site-footer-two__bottom -->
         </div><!-- /.site-footer-two -->
@@ -1170,12 +1170,12 @@
             <div class="side-menu__sep"></div><!-- /.side-menu__sep -->
             <div class="side-menu__content">
                 <p>Lorem Ipsum is simply dummy text the printing and setting industry. Lorm Ipsum has been the industry's stanard dummy text ever. </p>
-                <p><a href="mailto:needhelp@bizkar.com">needhelp@bizkar.com</a> <br> <a href="tel:888-999-0000">888 999 0000</a></p>
+                <p><a href="mailto:qasim@blockchain313.com">qasim@blockchain313.com</a> <br> <a href="tel:+923410592668">+92 341 0592668</a></p>
                 <div class="side-menu__social">
-                    <a class="fab fa-facebook-f" href="#"></a>
-                    <a class="fab fa-twitter" href="#"></a>
-                    <a class="fab fa-instagram" href="#"></a>
-                    <a class="fab fa-pinterest-p" href="#"></a>
+                    <a class="fab fa-facebook-f" href="https://www.facebook.com/meqasim95"></a>
+                    <a class="fab fa-twitter" href="https://twitter.com/meqasim95"></a>
+                    <a class="fab fa-instagram" href="https://www.instagram.com/meqasim95/"></a>
+                    <a class="fab fa-pinterest-p" href="https://www.pinterest.com/meqasim95/"></a>
                 </div>
             </div><!-- /.side-menu__content -->
         </div><!-- /.side-menu__block-inner -->
