updated index.html file

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="row">
                     <div class="col-xl-7">
                         <div class="banner-two__content">
-                            <h3><span>Discover New </span> <br>Idea To Build <br> Your <em>Business</em></h3>
+                            <h3><span>GBOB </span> <br><span>Guest Blogging Online (Outsourse) Business </span> <br>Rank Your Website to <br> Google <em>First Page</em></h3>
                             <p>We are here to help you to make your business available to whole world <br> and correctly optimize for search engine. </p>
                             <a href="#" class="thm-btn banner-two__btn">Discover Now <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn -->
                         </div><!-- /.banner-two__content -->
