--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
                         <div class="banner-two__content">
                             <h3>
                                 <span>GBOB </span> 
-                            </h3> <br><span>Guest Blogging Online (Outsourse) Business </span> <br>Rank Your Website to <br>
+                            </h3> 
+                            <br><p>Guest Blogging Online (Outsourse) Business </p> 
+                            <br>Rank Your Website to <br>
                             <h3> 
                                 Google <em>First Page</em>
                             </h3>
