--- a/index.html
+++ b/index.html
@@ -132,9 +132,11 @@
                         <div class="banner-two__content">
                             <h3>
                                 <span>GBOB </span> 
-                            </h3> 
-                            <br><p>Guest Blogging Online (Outsourse) Business </p> 
+                            </h3> <br>
+                            <h4>
+                                <b>Guest Blogging Online (Outsourse) Business </b> 
                             <br>Rank Your Website to <br>
+                        </h4>
                             <h3> 
                                 Google <em>First Page</em>
                             </h3>
