--- a/index.html
+++ b/index.html
@@ -134,11 +134,13 @@
                                 <span>GBOB </span> 
                             </h3> <br>
                             <h3>
-                                <b>Guest Blogging Online (Outsourse) Business </b> 
-                            <br>Rank Your Website to <br>
-                        </h3>
-                            <h3> 
+                                Guest Blogging Online (Outsourse) Business
+                            
+
+                            <b><br>Rank Your Website to <br>
+                        
                                 Google <em>First Page</em>
+                            </b>
                             </h3>
                             <p>We are here to help you to make your business available to whole world <br> and correctly optimize for search engine. </p>
                             <a href="#" class="thm-btn banner-two__btn">Discover Now <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn -->
