Updated index and contact

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact Page || Bizkar || Creative Multi-Purpose HTML Template</title>
+    <title>Contact Us || Services By BlockChain 313 team</title>
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
@@ -60,23 +60,7 @@
                     <div class="main-nav__main-navigation">
                         <ul class=" main-nav__navigation-box">
                             <li class="dropdown">
-                                <a href="index.html">Home</a>
-                                <ul>
-                                    <li><a href="index.html">Home 01</a></li>
-                                    <li><a href="index-2.html">Home 02</a></li>
-                                    <li><a href="index-3.html">Home 03</a></li>
-                                    <li><a href="index-4.html">Home 04</a></li>
-                                    <li><a href="index-5.html">Home 05</a></li>
-                                    <li class="dropdown"><a href="#">Header Styles</a>
-                                        <ul>
-                                            <li><a href="index.html">Header 01</a></li>
-                                            <li><a href="index-2.html">Header 02</a></li>
-                                            <li><a href="index-3.html">Header 03</a></li>
-                                            <li><a href="index-4.html">Header 04</a></li>
-                                            <li><a href="index-5.html">Header 05</a></li>
-                                        </ul><!-- /.sub-menu -->
-                                    </li>
-                                </ul><!-- /.sub-menu -->
+                                <a href="https://services.blockchain313.com">Home</a>
                             </li>
                             <li>
                                 <a href="about.html">About</a>
@@ -148,8 +132,7 @@
                         <div class="contact-two__content">
                             <div class="contact-two__block">
                                 <h3>Don't Hesitate To Contact Us</h3>
-                                <p>Sed ut perspiciatis unde omnis iste natus erro voluptat accusantium doloremque laudantium
-                                    totam rem aperiam eaque</p>
+                                <p>Try us to grow your business and rank faster</p>
                             </div><!-- /.contact-two__block -->
                             <ul class="list-unstyled contact-two__info-list">
                                 <li>
@@ -157,21 +140,21 @@
                                         <i class="far fa-map-marked"></i>
                                         Address :
                                     </div><!-- /.contact-two__info-list-title -->
-                                    <p>27 Division St, New York, <br>NY 10002,USA</p>
+                                    <p>House # 144, St # 2, View Colony, RWP <br>Punjab, Pakistan</p>
                                 </li>
                                 <li>
                                     <div class="contact-two__info-list-title">
                                         <i class="far fa-phone"></i>
                                         Call Us :
                                     </div><!-- /.contact-two__info-list-title -->
-                                    <p><a href="tel:08964712365">08964712365</a></p>
+                                    <p><a href="tel:+923410592668">+92 341 0592668</a></p>
                                 </li>
                                 <li>
                                     <div class="contact-two__info-list-title">
                                         <i class="far fa-envelope"></i>
                                         Email Us :
                                     </div><!-- /.contact-two__info-list-title -->
-                                    <p><a href="mailto:support@gmail.com">support@gmail.com</a></p>
+                                    <p><a href="mailto:qasim@blockchain313.com">qasim@blockchain313.com</a></p>
                                 </li>
                             </ul><!-- /.contact-two__info-list -->
                         </div><!-- /.contact-two__content -->
