--- a/index.html
+++ b/index.html
@@ -133,17 +133,16 @@
                             <h3>
                                 <span>GBOB </span> 
                             </h3> <br>
-                            <h3>
-                                Guest Blogging Online (Outsourse) Business
+                            <h4>
+                                <em style="color:var(--thm-base)";>Guest Blogging Online (Outsourse) Business</em>
                             
-
-                            <b><br>Rank Your Website to <br>
-                        
-                                Google <em>First Page</em>
+                                <br>
+                                <br>
+                            <b style = "font-size: x-large; color:black">Rank Your Website to Google First Page
                             </b>
-                            </h3>
+                            </h4>
                             <p>We are here to help you to make your business available to whole world <br> and correctly optimize for search engine. </p>
-                            <a href="#" class="thm-btn banner-two__btn">Discover Now <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn -->
+                            <a href="contact.html" class="thm-btn banner-two__btn">Discover Now <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn -->
                         </div><!-- /.banner-two__content -->
                     </div><!-- /.col-xl-7 -->
                 </div><!-- /.row -->
