contact.html and map updated

--- a/contact.html
+++ b/contact.html
@@ -133,6 +133,8 @@
                             <div class="contact-two__block">
                                 <h3>Don't Hesitate To Contact Us</h3>
                                 <p>Try us to grow your business and rank faster</p>
+                                <br>
+                                <p>Get high PR, DA, backlinks</p>
                             </div><!-- /.contact-two__block -->
                             <ul class="list-unstyled contact-two__info-list">
                                 <li>
@@ -163,8 +165,10 @@
                         <form action="#" class="contact-two__form">
                             <div class="contact-two__block">
                                 <h3>Get In Touch</h3>
-                                <p>Sed ut perspiciatis unde omnis iste natus erro voluptat accusantium <br>doloremque laudantium
-                                    totam rem aperiam eaque</p>
+                                <p>we will contact you soon.
+                                    <br>
+                                    (within one to two hour or a day)
+                                </p>
                             </div><!-- /.contact-two__block -->
                             <div class="row">
                                 <div class="col-md-6">
@@ -188,7 +192,7 @@
         </section><!-- /.contact-two -->
 
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4562.753041141002!2d-118.80123790098536!3d34.152323469614075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e82469c2162619%3A0xba03efb7998eef6d!2sCostco+Wholesale!5e0!3m2!1sbn!2sbd!4v1562518641290!5m2!1sbn!2sbd" class="google-map__contact" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3322.522682857263!2d72.989359!3d33.6176871!3m2!1i1024!2i768!4f131!3m3!1m2!1s0x38df9682ec476e33%3A0xe2aab52cf822a6b4!2zMzPCsDM3JzAzLjciTiA3MsKwNTknMjkuNiJF!5e0!3m2!1sen!2s!4v1632313672397!5m2!1sen!2s" class="google-map__contact" allowfullscreen></iframe>
         <div class="site-footer-two">
             <img src="assets/images/shapes/footer-shape-2-1.png" alt="" class="site-footer-two__shape-1">
             <img src="assets/images/shapes/footer-shape-2-2.png" alt="" class="site-footer-two__shape-2">
