quform updated to index.html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
 
+    <link rel="stylesheet" type="text/css" href="quform/css/base.css" /><!-- Base form styles -->
+    <link rel="stylesheet" type="text/css" href="quform/themes/light/light.css" /><!-- Theme styles -->
+
 
 
 
@@ -1225,6 +1228,11 @@
 
     <!-- template scripts -->
     <script src="assets/js/theme.js"></script>
+
+    <script type="text/javascript" src="quform/js/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="quform/js/plugins.js"></script>
+    <script type="text/javascript" src="quform/js/scripts.js"></script>
+
 </body>
 
 </html>
