--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             </b>
                             </h4>
                             <p>We are here to help you to make your business available to whole world <br> and correctly optimize for search engine. </p>
-                            <a href="contact.html" class="thm-btn banner-two__btn">Discover Now <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn -->
+                            <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn banner-two__btn">Discover Now <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn -->
                         </div><!-- /.banner-two__content -->
                     </div><!-- /.col-xl-7 -->
                 </div><!-- /.row -->
@@ -223,8 +223,7 @@
                                     </div><!-- /.cta-three__icon -->
                                     <div class="cta-three__box-content">
                                         <h3>Business Strategy</h3>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor
-                                            incididunt ut labore et </p>
+                                        <p>We will increase your website DR (Domain Ranking) and DA (Domain Autority) by increasing your backlink using guest posting</p>
                                     </div><!-- /.cta-three__box-content -->
                                 </div><!-- /.cta-three__box -->
                                 <div class="cta-three__box">
@@ -232,9 +231,8 @@
                                         <i class="far fa-star-of-david"></i>
                                     </div><!-- /.cta-three__icon -->
                                     <div class="cta-three__box-content">
-                                        <h3>Improve Business Growth</h3>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor
-                                            incididunt ut labore et </p>
+                                        <h3>Improve your Website Ranking</h3>
+                                        <p>This will increase your website ranking and your website pages will land on google first page.</p>
                                     </div><!-- /.cta-three__box-content -->
                                 </div><!-- /.cta-three__box -->
                                 <div class="cta-three__box">
@@ -242,13 +240,12 @@
                                         <i class="fa fa-desktop"></i>
                                     </div><!-- /.cta-three__icon -->
                                     <div class="cta-three__box-content">
-                                        <h3>Marketing Yor Business</h3>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor
-                                            incididunt ut labore et </p>
+                                        <h3>High Ranking = High Traffic = More Money</h3>
+                                        <p>High ranking will drive more traffic to your website. As you know more means more money.</p>
                                     </div><!-- /.cta-three__box-content -->
                                 </div><!-- /.cta-three__box -->
                             </div><!-- /.cta-three__box-wrap -->
-                            <a href="#" class="thm-btn cta-three__btn">Get Started <i class="fa fa-angle-double-right"></i></a>
+                            <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn cta-three__btn">Get Started <i class="fa fa-angle-double-right"></i></a>
                             <!-- /.thm-btn cta-three__btn -->
                         </div><!-- /.cta-three__content -->
                     </div><!-- /.col-lg-5 -->
@@ -268,10 +265,9 @@
                                         Services For Your <br>
                                         Business</h3>
                                 </div><!-- /.block-title-two -->
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                    laboris nisi ut aliquip ex ea commodo consequat. </p>
-                                <a href="#" class="thm-btn">View All Services <i class="fa fa-angle-double-right"></i></a>
+                                <p>If you want any services or got any question, then don't hesitate, just feel free to call me. We will provide best services to you.</p>
+                                <p><a href="mailto:qasim@blockchain313.com">qasim@blockchain313.com</a> <br> <a href="tel:+923410592668">+92 341 0592668</a></p>
+                                <a href="#" class="thm-btn">All Services <i class="fa fa-angle-double-right"></i></a>
                                 <!-- /.thm-btn -->
                             </div><!-- /.service-two__block -->
                         </div><!-- /.my-auto -->
@@ -285,9 +281,8 @@
                                         <!-- /.service-two__single-image -->
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-hand-holding-usd"></i>
-                                            <h3><a href="#">Finance & Insurance</a></h3>
-                                            <p>Lorem ipsum dolor sit amet conse
-                                                ctetur adipisicing elit sed do eiusmod tempor incididunt ut labore et</p>
+                                            <h3><a href="#">Guest Posting</a></h3>
+                                            <p>We have high DA, DR wesite where we will post your Guest post with you wesite backlink.</p>
                                             <a href="#" class="service-two__link"><i class="fa fa-long-arrow-alt-right"></i></a>
                                             <!-- /.service-two__link -->
                                         </div><!-- /.service-two__single-inner -->
@@ -299,9 +294,8 @@
                                         <!-- /.service-two__single-image -->
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-umbrella-beach"></i>
-                                            <h3><a href="#">Investment Planning</a></h3>
-                                            <p>Lorem ipsum dolor sit amet conse
-                                                ctetur adipisicing elit sed do eiusmod tempor incididunt ut labore et</p>
+                                            <h3><a href="#">Smart Contract</a></h3>
+                                            <p>We can write a smart contract for you using ethereum on solidity Language.</p>
                                             <a href="#" class="service-two__link"><i class="fa fa-long-arrow-alt-right"></i></a>
                                             <!-- /.service-two__link -->
                                         </div><!-- /.service-two__single-inner -->
@@ -313,9 +307,8 @@
                                         <!-- /.service-two__single-image -->
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-paper-plane"></i>
-                                            <h3><a href="#">Market Positioning</a></h3>
-                                            <p>Lorem ipsum dolor sit amet conse
-                                                ctetur adipisicing elit sed do eiusmod tempor incididunt ut labore et</p>
+                                            <h3><a href="#">Web Development (WordPress and Blogger)</a></h3>
+                                            <p>We can build </p>
                                             <a href="#" class="service-two__link"><i class="fa fa-long-arrow-alt-right"></i></a>
                                             <!-- /.service-two__link -->
                                         </div><!-- /.service-two__single-inner -->
@@ -327,9 +320,8 @@
                                         <!-- /.service-two__single-image -->
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-chart-network"></i>
-                                            <h3><a href="#">Business Consulting</a></h3>
-                                            <p>Lorem ipsum dolor sit amet conse
-                                                ctetur adipisicing elit sed do eiusmod tempor incididunt ut labore et</p>
+                                            <h3><a href="#">Your Portfolio using Github Pages</a></h3>
+                                            <p></p>
                                             <a href="#" class="service-two__link"><i class="fa fa-long-arrow-alt-right"></i></a>
                                             <!-- /.service-two__link -->
                                         </div><!-- /.service-two__single-inner -->
