--- a/index.html
+++ b/index.html
@@ -307,8 +307,34 @@
                                         <!-- /.service-two__single-image -->
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-paper-plane"></i>
-                                            <h3><a href="#">Web Development (WordPress and Blogger)</a></h3>
-                                            <p>We can build </p>
+                                            <h3><a href="#">Web Development</a></h3>
+                                            <p>We can design and develop a website for you using HTML5, CSS3, JavaScript, Jquery, Ajax, PHP, and Specially bootstrap. This Services Platform is also build on bootstrap and hosted on Github Pages.</p>
+                                            <a href="#" class="service-two__link"><i class="fa fa-long-arrow-alt-right"></i></a>
+                                            <!-- /.service-two__link -->
+                                        </div><!-- /.service-two__single-inner -->
+                                    </div><!-- /.service-two__single -->
+                                </div><!-- /.col-md-6 -->
+                                <div class="col-md-6">
+                                    <div class="service-two__single js-tilt">
+                                        <div class="service-two__single-image" style="background-image: url(assets/images/backgrounds/service-bg-1-1.jpg);"></div>
+                                        <!-- /.service-two__single-image -->
+                                        <div class="service-two__single-inner">
+                                            <i class="fal fa-paper-plane"></i>
+                                            <h3><a href="#">WordPress Development</a></h3>
+                                            <p>We can design a professional and clean WordPress Website for you. our team have experience of 6 year. We also can puchase domain and hosting on behalf of you for your website.</p>
+                                            <a href="#" class="service-two__link"><i class="fa fa-long-arrow-alt-right"></i></a>
+                                            <!-- /.service-two__link -->
+                                        </div><!-- /.service-two__single-inner -->
+                                    </div><!-- /.service-two__single -->
+                                </div><!-- /.col-md-6 -->
+                                <div class="col-md-6">
+                                    <div class="service-two__single js-tilt">
+                                        <div class="service-two__single-image" style="background-image: url(assets/images/backgrounds/service-bg-1-1.jpg);"></div>
+                                        <!-- /.service-two__single-image -->
+                                        <div class="service-two__single-inner">
+                                            <i class="fal fa-paper-plane"></i>
+                                            <h3><a href="#">Blogger Development</a></h3>
+                                            <p>Our Team first started developemnt using google own blogger platform back in 2011. So we can Design any niche site for you on blogger. Checkout our blog <a href="https://www.shaheeninstitute.blogspot.com">Shaheen Institute.</a></p>
                                             <a href="#" class="service-two__link"><i class="fa fa-long-arrow-alt-right"></i></a>
                                             <!-- /.service-two__link -->
                                         </div><!-- /.service-two__single-inner -->
@@ -320,8 +346,8 @@
                                         <!-- /.service-two__single-image -->
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-chart-network"></i>
-                                            <h3><a href="#">Your Portfolio using Github Pages</a></h3>
-                                            <p></p>
+                                            <h3><a href="#">Your Portfolio Site using Github Pages</a></h3>
+                                            <p>We can deploy a website on github pages using git. This platform is also hosted on github.</p>
                                             <a href="#" class="service-two__link"><i class="fa fa-long-arrow-alt-right"></i></a>
                                             <!-- /.service-two__link -->
                                         </div><!-- /.service-two__single-inner -->
@@ -342,7 +368,7 @@
                             <div class="funfact-one__icon">
                                 <i class="far fa-user-alt"></i>
                             </div><!-- /.funfact-one__icon -->
-                            <h3><span class="counter">2500</span><!-- /.counter -->+</h3>
+                            <h3><span class="counter">250</span><!-- /.counter -->+</h3>
                             <p>Project</p>
                         </div><!-- /.funfact-one__single -->
                     </div><!-- /.col-lg-3 col-md-6 -->
@@ -351,7 +377,7 @@
                             <div class="funfact-one__icon">
                                 <i class="far fa-heart"></i>
                             </div><!-- /.funfact-one__icon -->
-                            <h3><span class="counter">2960</span><!-- /.counter -->+</h3>
+                            <h3><span class="counter">290</span><!-- /.counter -->+</h3>
                             <p>Satisfied Clients</p>
                         </div><!-- /.funfact-one__single -->
                     </div><!-- /.col-lg-3 col-md-6 -->
@@ -360,7 +386,7 @@
                             <div class="funfact-one__icon">
                                 <i class="far fa-cloud-download"></i>
                             </div><!-- /.funfact-one__icon -->
-                            <h3><span class="counter">5620</span><!-- /.counter -->
+                            <h3><span class="counter">10</span><!-- /.counter -->
                             </h3>
                             <p>Win Awards</p>
                         </div><!-- /.funfact-one__single -->
@@ -370,7 +396,7 @@
                             <div class="funfact-one__icon">
                                 <i class="far fa-star"></i>
                             </div><!-- /.funfact-one__icon -->
-                            <h3><span class="counter">365</span><!-- /.counter -->+</h3>
+                            <h3><span class="counter">11</span><!-- /.counter -->+</h3>
                             <p>Team Member</p>
                         </div><!-- /.funfact-one__single -->
                     </div><!-- /.col-lg-3 col-md-6 -->
@@ -428,7 +454,7 @@
             <div class="container text-center">
                 <h3>Our Business Advisors <br>
                     Always Help You</h3>
-                <a href="#" class="thm-btn">Read More <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn -->
+                <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn">Contact Here<i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn -->
             </div><!-- /.container -->
         </section><!-- /.cta-two -->
 
