--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,7 @@
             </div><!-- /.site-footer-two__upper -->
             <div class="site-footer-two__bottom">
                 <div class="container">
-                    <p>Copyright © 2021 <a href="https://www.blockchain313.com">BlockChain Technology</a>, <a href="https://videofy.co.vu">Videofy AutoMobile Zone</a> and <a href="https://www.shaheeninstitute.blogspot.com">Shaheen Institute</a>. All Right Reserved.</p>
+                    <p>Copyright © 2021 <a href="https://www.blockchain313.com">BlockChain Technology</a>, <a href="https://www.videofy.co.vu">Videofy AutoMobile Zone</a> and <a href="https://www.shaheeninstitute.blogspot.com">Shaheen Institute</a>. All Right Reserved.</p>
                 </div><!-- /.container -->
             </div><!-- /.site-footer-two__bottom -->
         </div><!-- /.site-footer-two -->
