--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                                     <p>What we do</p>
                                     <h3>Investment Planning <br> Pays Best Interest.</h3>
                                 </div><!-- /.block-title-two -->
-                                <p>Choice of hiring best services is best for business growth. So be smart to choose any service. Best planning will give you boost</p>
+                                <p>Choice of hiring best services is best for business growth. So be smart to choose any service. Best planning will give you boost in business.</p>
                                 <ul class="list-unstyled video-one__list">
                                     <li>
                                         <i class="far fa-check"></i>
