services page update

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 <a href="about.html">About</a>
                             </li>
                             <li>
-                                <a href="services-2.html">Services</a>
+                                <a href="services.html">Services</a>
                             </li>
                             <li><a href="team.html">Team</a></li>
 
@@ -778,7 +778,7 @@
                                 <h3 class="footer-widget__title">Quick Links</h3><!-- /.footer-widget__title -->
                                 <ul class="footer-widget__links-list list-unstyled">
                                     <li><a href="https://services.blockchain313.com/about.html">About Us</a></li>
-                                    <li><a href="https://services.blockchain313.com/services-2.html">Our Services</a></li>
+                                    <li><a href="https://services.blockchain313.com/services.html">Our Services</a></li>
                                     <li><a href="https://services.blockchain313.com/pricing.html">Pricing</a></li>
                                     <li><a href="https://services.blockchain313.com/team.html">Team</a></li>
                                     <li><a href="https://www.blockchain313.com/">Latest Blog</a></li>
