Mobile Nav updation

--- a/index.html
+++ b/index.html
@@ -841,8 +841,8 @@
             </nav>
             <div class="side-menu__sep"></div><!-- /.side-menu__sep -->
             <div class="side-menu__content">
-                <p>Lorem Ipsum is simply dummy text the printing and setting industry. Lorm Ipsum has been the industry's stanard dummy text ever. </p>
-                <p><a href="mailto:qasim@blockchain313.com">qasim@blockchain313.com</a> <br> <a href="tel:+923410592668">+92 341 0592668</a></p>
+                <p>Blockchain Technology Services are empowered 11+ team member. We Work very hard to fulfill our client goal. Focusing on quality work along with satisfied client. </p>
+                <p><a href="mailto:qasim@blockchain313.com">admin@blockchain313.com</a> <br> <a href="tel:+923410592668">+92 341 0592668</a></p>
                 <div class="side-menu__social">
                     <a class="fab fa-facebook-f" href="https://www.facebook.com/meqasim95"></a>
                     <a class="fab fa-twitter" href="https://twitter.com/meqasim95"></a>
